[datafactory] Fix ES9 WIP