@@ -18,12 +18,16 @@
 package io.vertigo.datafactory.plugins.search.elasticsearch.rest;
 
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.regex.Pattern;
 
+import co.elastic.clients.elasticsearch._types.SortOptions;
+import co.elastic.clients.elasticsearch._types.SortOrder;
 import co.elastic.clients.elasticsearch._types.aggregations.Aggregation;
 import co.elastic.clients.elasticsearch._types.query_dsl.BoolQuery;
+import co.elastic.clients.util.NamedValue;
 import io.vertigo.core.lang.BasicType;
 import io.vertigo.core.lang.BasicTypeAdapter;
 import io.vertigo.core.lang.VSystemException;
@@ -36,6 +40,7 @@ import io.vertigo.datafactory.impl.search.dsl.model.DslGeoExpression;
 import io.vertigo.datafactory.impl.search.dsl.model.DslGeoRangeQuery;
 import io.vertigo.datafactory.impl.search.dsl.rules.DslParserUtil;
 import io.vertigo.datafactory.plugins.search.elasticsearch.DslGeoToQueryBuilderUtil;
+import io.vertigo.datafactory.plugins.search.elasticsearch.ESDocumentCodec;
 import io.vertigo.datafactory.plugins.search.elasticsearch.IndexType;
 import io.vertigo.datafactory.search.model.SearchQuery;
 import io.vertigo.datamodel.data.definitions.DataDefinition;
@@ -44,109 +49,115 @@ import io.vertigo.datamodel.data.model.DtListState;
 
 final class ESAggregationBuilder {
 
-	private static final int TERM_AGGREGATION_SIZE = 50; //max 50 facets values per facet
-	private static final int TOPHITS_SUBAGGREGATION_SIZE = 10; //max 10 documents per cluster when clusterization is used
+	private static final int TERM_AGGREGATION_SIZE = 50; // max 50 facets values per facet
+	private static final int TOPHITS_SUBAGGREGATION_SIZE = 10; // max 10 documents per cluster when clusterization is used
 	private static final String TOPHITS_SUBAGGREGATION_NAME = "top";
 	private static final String DATE_PATTERN = "dd/MM/yyyy";
-	private static final Pattern RANGE_PATTERN = Pattern.compile("([a-z][a-zA-Z0-9]*):([\\[\\{])(.*) TO (.*)([\\}\\]])");
+	private static final Pattern RANGE_PATTERN = Pattern
+			.compile("([a-z][a-zA-Z0-9]*):([\\[\\{])(.*) TO (.*)([\\}\\]])");
 
 	private ESAggregationBuilder() {
-		//private
+		// private
 	}
 
-	static Map<String, Aggregation> build(final SearchQuery searchQuery, final DataDefinition indexDefinition, final DtListState listState,
+	static Map<String, Aggregation> build(final SearchQuery searchQuery,
+			final DtListState listState, final List<SortOptions> sortOptions, final DataDefinition indexDefinition,
 			final Map<Class, BasicTypeAdapter> typeAdapters) {
 		final Map<String, Aggregation> allAggregations = new HashMap<>();
 
-		if (searchQuery.getFacetedQuery().isEmpty()) {
-			return allAggregations;
-		}
-
-		final FacetedQuery facetedQuery = searchQuery.getFacetedQuery().get();
-		final var facetDefinitions = facetedQuery.getDefinition().getFacetDefinitions();
-
 		boolean clusterAlreadyAdded = false;
+		if (searchQuery.getFacetedQuery().isPresent()) {
 
-		for (final FacetDefinition facetDefinition : facetDefinitions) {
-			// 1. Prepare Sub-Aggregations
-			final Map<String, Aggregation> subAggregations = new HashMap<>();
+			final FacetedQuery facetedQuery = searchQuery.getFacetedQuery().get();
+			final var facetDefinitions = facetedQuery.getDefinition().getFacetDefinitions();
 
-			// A. Clustering (TopHits)
-			if (searchQuery.isClusteringFacet() && facetDefinition.equals(searchQuery.getClusteringFacetDefinition())) {
-				final Aggregation topHitsAgg = createTopHitsAggregation(listState);
-				subAggregations.put(TOPHITS_SUBAGGREGATION_NAME, topHitsAgg);
-				clusterAlreadyAdded = true;
-			}
+			for (final FacetDefinition facetDefinition : facetDefinitions) {
+				// 1. Prepare Sub-Aggregations
+				final Map<String, Aggregation> subAggregations = new HashMap<>();
 
-			// B. Create Base Aggregation
-			final Aggregation mainAggregation = facetToAggregation(facetDefinition, searchQuery.getCriteria(), typeAdapters, subAggregations);
-
-			// 2. Wrap in Filter if MultiSelectable (to exclude own selection from calculation but keep others)
-			// Logic: If I selected "Red", I still want to see counts for "Blue" (PostFilter), but if I selected "Large" in another facet, I want to respect that.
-			// The standard ES pattern for multi-select facets is:
-			// - Main Query: filters OTHER facets
-			// - Post Filter: filters THIS facet (for hits)
-			// - Aggregation: needs to see hits filtered by OTHER facets, but NOT by THIS facet.
-			// So for each facet, we filter the aggregation capability by "All filters EXCEPT this one".
-
-			final BoolQuery.Builder aggsFilterBuilder = new BoolQuery.Builder();
-			for (final FacetDefinition filterFacetDefinition : facetDefinitions) {
-				if (filterFacetDefinition.isMultiSelectable() && !facetDefinition.equals(filterFacetDefinition)) {
-					// Add filter from OTHER multi-selectable facets
-					// (Mono-selectable are already in Main Query, so already filtered)
-					final boolean useSubKeywordField = useSubKeywordFieldForFacet(filterFacetDefinition);
-					ESSearchQueryBuilder.appendSelectedFacetValuesFilter(aggsFilterBuilder, facetedQuery.getSelectedFacetValues().getFacetValues(filterFacetDefinition.getName()),
-							filterFacetDefinition.getDataField(), useSubKeywordField);
+				// A. Clustering (TopHits)
+				if (searchQuery.isClusteringFacet() && facetDefinition.equals(searchQuery.getClusteringFacetDefinition())) {
+					final Aggregation topHitsAgg = createTopHitsAggregation(listState, sortOptions);
+					subAggregations.put(TOPHITS_SUBAGGREGATION_NAME, topHitsAgg);
+					clusterAlreadyAdded = true;
 				}
-			}
 
-			final BoolQuery aggsFilter = aggsFilterBuilder.build();
-			if (aggsFilter.hasClauses()) {
-				// Wrap in Filter Aggregation
-				final Aggregation filteredAgg = Aggregation.of(a -> a
-						.filter(aggsFilter._toQuery())
-						.aggregations(facetDefinition.getName(), mainAggregation));
-				allAggregations.put(facetDefinition.getName() + "_filter", filteredAgg);
-			} else {
-				allAggregations.put(facetDefinition.getName(), mainAggregation);
+				// B. Create Base Aggregation
+				final Aggregation mainAggregation = facetToAggregation(facetDefinition, searchQuery.getCriteria(),
+						typeAdapters, subAggregations);
+
+				// 2. Wrap in Filter if MultiSelectable (to exclude own selection from calculation but keep others)
+				// Logic: If I selected "Red", I still want to see counts for "Blue"
+				// (PostFilter), but if I selected "Large" in another facet, I want to respect that.
+				// The standard ES pattern for multi-select facets is:
+				// - Main Query: filters OTHER facets
+				// - Post Filter: filters THIS facet (for hits)
+				// - Aggregation: needs to see hits filtered by OTHER facets, but NOT by THIS facet.
+				// So for each facet, we filter the aggregation capability by "All filters EXCEPT this one".
+
+				final BoolQuery.Builder aggsFilterBuilder = new BoolQuery.Builder();
+				for (final FacetDefinition filterFacetDefinition : facetDefinitions) {
+					if (filterFacetDefinition.isMultiSelectable() && !facetDefinition.equals(filterFacetDefinition)) {
+						// Add filter from OTHER multi-selectable facets
+						// (Mono-selectable are already in Main Query, so already filtered)
+						final boolean useSubKeywordField = useSubKeywordFieldForFacet(filterFacetDefinition);
+						ESSearchQueryBuilder.appendSelectedFacetValuesFilter(aggsFilterBuilder,
+								facetedQuery.getSelectedFacetValues().getFacetValues(filterFacetDefinition.getName()),
+								filterFacetDefinition.getDataField(), useSubKeywordField);
+					}
+				}
+
+				final BoolQuery aggsFilter = aggsFilterBuilder.build();
+				if (aggsFilter.hasClauses()) {
+					// Wrap in Filter Aggregation
+					final Aggregation filteredAgg = Aggregation.of(a -> a
+							.filter(aggsFilter._toQuery())
+							.aggregations(facetDefinition.getName(), mainAggregation));
+					allAggregations.put(facetDefinition.getName() + "_filter", filteredAgg);
+				} else {
+					allAggregations.put(facetDefinition.getName(), mainAggregation);
+				}
 			}
 		}
 
 		// If clustering was requested but not linked to a declared facet (should not happen in standard cases?)
 		if (searchQuery.isClusteringFacet() && !clusterAlreadyAdded) {
-			// This case was present in AbstractESSearchRequestBuilder, but seems odd. 
+			// This case was present in AbstractESSearchRequestBuilder, but seems odd.
 			// If clustering facet is not part of facetedQuery definitions, we might need to add it explicitly.
 			// Implementing for fallback safety.
 			final FacetDefinition clusteringFacetDefinition = searchQuery.getClusteringFacetDefinition();
-			final Aggregation topHitsAgg = createTopHitsAggregation(listState);
+			final Aggregation topHitsAgg = createTopHitsAggregation(listState, sortOptions);
 			final Map<String, Aggregation> subAggs = new HashMap<>();
 			subAggs.put(TOPHITS_SUBAGGREGATION_NAME, topHitsAgg);
 
-			final Aggregation clusteringAgg = facetToAggregation(clusteringFacetDefinition, searchQuery.getCriteria(), typeAdapters, subAggs);
+			final Aggregation clusteringAgg = facetToAggregation(clusteringFacetDefinition, searchQuery.getCriteria(),
+					typeAdapters, subAggs);
 			allAggregations.put(clusteringFacetDefinition.getName(), clusteringAgg);
 		}
 
 		return allAggregations;
 	}
 
-	private static Aggregation createTopHitsAggregation(final DtListState listState) {
+	private static Aggregation createTopHitsAggregation(final DtListState listState, final List<SortOptions> sortOptions) {
 		return Aggregation.of(a -> a
 				.topHits(th -> {
 					th.size(listState.getMaxRows().orElse(TOPHITS_SUBAGGREGATION_SIZE))
-							.from(listState.getSkipRows());
+							.from(listState.getSkipRows())
+							.source(src -> src.filter(f -> f.includes(List.of(ESDocumentCodec.FULL_RESULT))));
 
-					// Highlight is optionnal, assumed false for simple migration or passed via method param if needed. 
+					// Highlight is optionnal, assumed false for simple migration or passed via method param if needed.
 					// AbstractESSearchRequestBuilder had useHighlight param.
 					// For now we don't enable highlight in TopHits to keep it simple, or we can add it.
 
 					if (listState.getSortFieldName().isPresent()) {
-						// th.sort(...) // Needs SortOptions
+						th.sort(sortOptions);
 					}
 					return th;
 				}));
 	}
 
-	private static Aggregation facetToAggregation(final FacetDefinition facetDefinition, final Object criteria, final Map<Class, BasicTypeAdapter> typeAdapters,
+	private static Aggregation facetToAggregation(final FacetDefinition facetDefinition, final Object criteria,
+			final Map<Class, BasicTypeAdapter> typeAdapters,
 			final Map<String, Aggregation> subAggregations) {
 		final DataField dtField = facetDefinition.getDataField();
 
@@ -164,12 +175,13 @@ final class ESAggregationBuilder {
 		return termFacetToAggregation(facetDefinition, dtField, subAggregations);
 	}
 
-	private static Aggregation termFacetToAggregation(final FacetDefinition facetDefinition, final DataField dtField, final Map<String, Aggregation> subAggregations) {
-		/*final List<co.elastic.clients.elasticsearch._types.aggregations.NamedValue<SortOrder>> facetOrder = switch (facetDefinition.getOrder()) {
-			case alpha -> Collections.singletonList(co.elastic.clients.elasticsearch._types.aggregations.NamedValue.of("_key", SortOrder.Asc));
-			case count -> Collections.singletonList(co.elastic.clients.elasticsearch._types.aggregations.NamedValue.of("_count", SortOrder.Desc));
-			case definition -> Collections.emptyList();
-		};*/
+	private static Aggregation termFacetToAggregation(final FacetDefinition facetDefinition, final DataField dtField,
+			final Map<String, Aggregation> subAggregations) {
+		final List<NamedValue<SortOrder>> facetOrder = switch (facetDefinition.getOrder()) {
+			case alpha -> List.of(NamedValue.of("_key", SortOrder.Asc));
+			case count -> List.of(NamedValue.of("_count", SortOrder.Desc));
+			case definition -> null; // Pas de tri spécifique
+		};
 
 		String fieldName = dtField.name();
 		if (useSubKeywordFieldForFacet(facetDefinition)) {
@@ -178,13 +190,24 @@ final class ESAggregationBuilder {
 
 		final String finalFieldName = fieldName;
 
-		return Aggregation.of(a -> a
-				.terms(t -> t
-						.field(finalFieldName)
-						.size(TERM_AGGREGATION_SIZE)
-				//.order(facetOrder) //BucketOrder is complex in v9. .order(List<NamedValue<SortOrder>>)
-				)
-				.aggregations(subAggregations));
+		return Aggregation.of(a -> {
+			a.terms(t -> {
+				t.field(finalFieldName)
+						.size(TERM_AGGREGATION_SIZE);
+				// On injecte l'ordre de façon conditionnelle
+				if (facetOrder != null) {
+					t.order(facetOrder);
+				}
+				return t;
+			});
+
+			// Ajout des sous-agrégations (sous réserve qu'elles ne soient pas nulles/vides)
+			if (subAggregations != null && !subAggregations.isEmpty()) {
+				a.aggregations(subAggregations);
+			}
+
+			return a;
+		});
 	}
 
 	private static boolean useSubKeywordFieldForFacet(final FacetDefinition facetDefinition) {
@@ -192,7 +215,8 @@ final class ESAggregationBuilder {
 		return indexType.isIndexSubKeyword();
 	}
 
-	private static Aggregation rangeFacetToAggregation(final FacetDefinition facetDefinition, final DataField dtField, final Object criteria,
+	private static Aggregation rangeFacetToAggregation(final FacetDefinition facetDefinition, final DataField dtField,
+			final Object criteria,
 			final Map<Class, BasicTypeAdapter> typeAdapters, final Map<String, Aggregation> subAggregations) {
 
 		switch (dtField.smartTypeDefinition().getScope()) {
@@ -208,18 +232,22 @@ final class ESAggregationBuilder {
 				return geoRangeFacetToAggregation(facetDefinition, dtField, criteria, typeAdapters, subAggregations);
 			case DATA_TYPE:
 			default:
-				throw new IllegalArgumentException("Type de donnée non pris en charge comme Facet pour le keyconcept indexé [" + dtField.smartTypeDefinition() + "].");
+				throw new IllegalArgumentException(
+						"Type de donnée non pris en charge comme Facet pour le keyconcept indexé ["
+								+ dtField.smartTypeDefinition() + "].");
 		}
-		return null; //Should not happen
+		return null; // Should not happen
 	}
 
-	private static Aggregation numberRangeFacetToAggregation(final FacetDefinition facetDefinition, final DataField dtField, final Map<String, Aggregation> subAggregations) {
+	private static Aggregation numberRangeFacetToAggregation(final FacetDefinition facetDefinition,
+			final DataField dtField, final Map<String, Aggregation> subAggregations) {
 		return Aggregation.of(a -> a
 				.range(r -> {
 					r.field(dtField.name());
 					for (final FacetValue facetRange : facetDefinition.getFacetRanges()) {
 						final String filterValue = facetRange.listFilter().getFilterValue();
-						final String[] parsedFilter = DtListPatternFilterUtil.parseFilter(filterValue, RANGE_PATTERN).get();
+						final String[] parsedFilter = DtListPatternFilterUtil.parseFilter(filterValue, RANGE_PATTERN)
+								.get();
 						final Optional<Double> minValue = convertToDouble(parsedFilter[3]);
 						final Optional<Double> maxValue = convertToDouble(parsedFilter[4]);
 
@@ -239,7 +267,8 @@ final class ESAggregationBuilder {
 				.aggregations(subAggregations));
 	}
 
-	private static Aggregation dateRangeFacetToAggregation(final FacetDefinition facetDefinition, final DataField dtField, final Map<String, Aggregation> subAggregations) {
+	private static Aggregation dateRangeFacetToAggregation(final FacetDefinition facetDefinition,
+			final DataField dtField, final Map<String, Aggregation> subAggregations) {
 		return Aggregation.of(a -> a
 				.dateRange(r -> {
 					r.field(dtField.name())
@@ -248,17 +277,18 @@ final class ESAggregationBuilder {
 					for (final FacetValue facetRange : facetDefinition.getFacetRanges()) {
 						final String filterValue = facetRange.listFilter().getFilterValue();
 						final String[] parsedFilter = DtListPatternFilterUtil.parseFilter(filterValue, RANGE_PATTERN)
-								.orElseThrow(() -> new VSystemException("Range Facet syntaxe invalid : " + filterValue));
+								.orElseThrow(
+										() -> new VSystemException("Range Facet syntaxe invalid : " + filterValue));
 						final Optional<Double> minValue = convertToDouble(parsedFilter[3]);
 						final Optional<Double> maxValue = convertToDouble(parsedFilter[4]);
 
 						r.ranges(rg -> {
 							rg.key(facetRange.code());
 							if (minValue.isPresent()) {
-								//rg.from(minValue.get());
+								// rg.from(minValue.get());
 							}
 							if (maxValue.isPresent()) {
-								//rg.to(maxValue.get());
+								// rg.to(maxValue.get());
 							}
 							return rg;
 						});
@@ -268,13 +298,14 @@ final class ESAggregationBuilder {
 				.aggregations(subAggregations));
 	}
 
-	private static Aggregation geoRangeFacetToAggregation(final FacetDefinition facetDefinition, final DataField dtField, final Object criteria,
+	private static Aggregation (final FacetDefinition facetDefinition,
+			final DataField dtField, final Object criteria,
 			final Map<Class, BasicTypeAdapter> typeAdapters, final Map<String, Aggregation> subAggregations) {
 
-		//Geo Distance Aggregation
-		//Need to compute origin.
-		//Assuming first range gives the origin strategy (fixed or from criteria)
-		//Logic copied from AbstractESSearchRequestBuilder
+		// Geo Distance Aggregation
+		// Need to compute origin.
+		// Assuming first range gives the origin strategy (fixed or from criteria)
+		// Logic copied from AbstractESSearchRequestBuilder
 
 		if (facetDefinition.getFacetRanges().isEmpty()) {
 			return null;
@@ -286,14 +317,16 @@ final class ESAggregationBuilder {
 
 		co.elastic.clients.elasticsearch._types.LatLonGeoLocation origin = null;
 
-		//Determine origin from first range
+		// Determine origin from first range
 		if (dslGeoExpressionFirst.getGeoQuery() instanceof DslGeoDistanceQuery) {
 			final DslGeoDistanceQuery geoEndDistanceQuery = (DslGeoDistanceQuery) dslGeoExpressionFirst.getGeoQuery();
-			origin = DslGeoToQueryBuilderUtil.computeGeoPoint(geoEndDistanceQuery.getGeoPoint(), criteria, typeAdapters);
+			origin = DslGeoToQueryBuilderUtil.computeGeoPoint(geoEndDistanceQuery.getGeoPoint(), criteria,
+					typeAdapters);
 		} else if (dslGeoExpressionFirst.getGeoQuery() instanceof DslGeoRangeQuery) {
 			final DslGeoRangeQuery geoRangeQuery = (DslGeoRangeQuery) dslGeoExpressionFirst.getGeoQuery();
 			final DslGeoDistanceQuery geoStartDistanceQuery = (DslGeoDistanceQuery) geoRangeQuery.getStartGeoPoint();
-			origin = DslGeoToQueryBuilderUtil.computeGeoPoint(geoStartDistanceQuery.getGeoPoint(), criteria, typeAdapters);
+			origin = DslGeoToQueryBuilderUtil.computeGeoPoint(geoStartDistanceQuery.getGeoPoint(), criteria,
+					typeAdapters);
 		}
 
 		final co.elastic.clients.elasticsearch._types.LatLonGeoLocation finalOrigin = origin;
@@ -301,27 +334,27 @@ final class ESAggregationBuilder {
 		return Aggregation.of(a -> a
 				.geoDistance(gd -> {
 					gd.field(geoFieldName);
-					//.location(finalOrigin);
+					.location(finalOrigin);
 
 					for (final FacetValue facetRange : facetDefinition.getFacetRanges()) {
 						final String filterValue = facetRange.listFilter().getFilterValue();
 						final DslGeoExpression dslGeoExpression = DslParserUtil.parseGeoExpression(filterValue);
 
-						//Extract distances
+						// Extract distances
 						final double fromFn = 0;
-						final double toFn = Double.MAX_VALUE; //Infinity
+						final double toFn = Double.MAX_VALUE; // Infinity
 
 						if (dslGeoExpression.getGeoQuery() instanceof DslGeoDistanceQuery) {
-							//Distance < X
+							// Distance < X
 							final DslGeoDistanceQuery geoDist = (DslGeoDistanceQuery) dslGeoExpression.getGeoQuery();
-							//toFn = DistanceUnit.fromString(geoDist.getDistanceUnit()).toMeters(geoDist.getDistance());
+							toFn = DistanceUnit.fromString(geoDist.getDistanceUnit()).toMeters(geoDist.getDistance());
 						} else if (dslGeoExpression.getGeoQuery() instanceof DslGeoRangeQuery) {
 							final DslGeoRangeQuery geoRange = (DslGeoRangeQuery) dslGeoExpression.getGeoQuery();
 							final DslGeoDistanceQuery startDist = (DslGeoDistanceQuery) geoRange.getStartGeoPoint();
 							final DslGeoDistanceQuery endDist = (DslGeoDistanceQuery) geoRange.getEndGeoPoint();
 
-							//fromFn = DistanceUnit.fromString(startDist.getDistanceUnit()).toMeters(startDist.getDistance());
-							//toFn = DistanceUnit.fromString(endDist.getDistanceUnit()).toMeters(endDist.getDistance());
+							fromFn = DistanceUnit.fromString(startDist.getDistanceUnit()).toMeters(startDist.getDistance());
+							toFn = DistanceUnit.fromString(endDist.getDistanceUnit()).toMeters(endDist.getDistance());
 						}
 
 						final double finalFrom = fromFn;
